test/errors/assert/nested_fn_call.yasl


fn f() {
    assert false
}

fn g(x) {
    assert x
    f()
}


g(true)

